CHANGES IN VERSION 1.17.0
------------------------

MODIFICATIONS

    o 1.17.2 add XML as valid source type
    o 1.17.1 add GSEMatrix as valid source type

CHANGES IN VERSION 1.15.0
------------------------

MODIFICATIONS

    o 1.15.13 Added "BLOB" as a valid source type
    o 1.15.7 Added "MTX" as a valid source type
    o 1.15.6 Expanded documentation to clarify that data can be hosted
    publically not strictly Bioconductor AWS
    o 1.15.4 Added "XLS/XLSX" as valid source type

INTERNAL BUG CORRECTION

    o 1.15.11 updated GencodeGFF recipes for potential future use (still would
    revisit this with another update to do like ensembl on the fly)
    o 1.15.5 remove validity check that is wrong/outdated
    o 1.15.1 needToRerunNonStandardOrgDb added as helper function for when
    generating non standard org dbs. 1.15.3 added try catch in case aws buckets
    unreachable. 

CHANGES IN VERSION 1.13.0
------------------------

NEW FEATURES

    o Added ability to have multiple RDataPaths associated with single hub
    id for strongly associated files (like bam and its bai index file)
    o DispatchClass are now validated against AnnotationHub::DispatchClassList()
    which contains currently available DispatchClass and brief description of
    loading process.

CHANGES IN VERSION 1.11.0
------------------------
MODIFICATIONS

    o Removed scripts for Pazar DB as website no longer active
    o Update from BiocInstaller to BiocManager

NEW FEATURES

    o Species and taxonomyId are now validated against GenomeInfoDbData object

BUG FIX

    o Fix TwoBit resource receipe. Converts DNA that is not A,C,T,G,N to N do to
    design of rtracklayer::export for TwoBit
    o Fix bug with assignment of tags in annotationhub
    o makeEpigenomeRoadMap recipe updated to account for XML bug that cannot
    handle http urls. updated to https

CHANGES IN VERSION 1.10.0
------------------------
MODIFICATIONS

    o Moved readMetadataFromCsv back to AnnotationHubData.
