@@ -3,6 +3,8 @@ CHANGES IN VERSION 1.17.0
 
 MODIFICATIONS
 
+    o 1.17.3 add check for valid Title and Description in metadata file. It
+    should not be empty or NA
     o 1.17.2 add XML as valid source type
     o 1.17.1 add GSEMatrix as valid source type
 
